--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/LukaDym/MyFirstWebSite#readme",
   "dependencies": {
+    "detect-port": "^1.5.1",
     "express": "^4.18.1"
   },
   "devDependencies": {
