--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/LukaDym/MyFirstWebSite#readme",
   "dependencies": {
     "detect-port": "^1.5.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1"
   },
   "devDependencies": {
